Dashboard tweak: episodes are collapsed by default Mobile fix: accidentally removed link from mobile layout

--- a/app/assets/css/scss/nodetv.scss
+++ b/app/assets/css/scss/nodetv.scss
@@ -359,11 +359,8 @@ input.form-control+input.form-control {
 					}
 				}
 			}
-			div.title {
-				font-size: 12px;
-				margin: 0px auto;
-				width: 118px;
-				
+			> .title {
+				display: none;
 			}
 		}
 	}
